<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveSelected">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/white"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp"
            tools:ignore="MissingConstraints">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo_selected"
                android:layout_width="320dp"
                android:layout_height="258dp"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/black"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="15dp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="@string/drama_name" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/title_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginEnd="16dp"
                        android:text="Rating" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_star_24"
                            android:contentDescription="Star Filled" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_star_24"
                            android:contentDescription="Star Filled" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_star_24"
                            android:contentDescription="Star Filled" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_star_24"
                            android:contentDescription="Star Filled" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_star_24"
                            android:contentDescription="Star Outline" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/title_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/title_genre"/>
                    <TextView
                        android:id="@+id/item_genre"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/genre" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/title_pemeran"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/title_pemeran"/>

                    <TextView
                        android:id="@+id/item_pemeran"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/pemeran" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/title_tayang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/title_tayang"/>

                    <TextView
                        android:id="@+id/item_tayang"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        tools:text="@string/title_tayang" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/title_jumlah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/jumlah_episode"/>

                    <TextView
                        android:id="@+id/item_jumlah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="@string/jumlah_episode"/>
                </TableRow>
            </TableLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/title_Deskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/title_deskripsi"/>

                <TextView
                    android:padding="25dp"
                    android:id="@+id/item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/description"/>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_sharee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/share"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>